{
    "name": "ExampleSpaceShooterInput",
    "maps": [
        {
            "name": "Game",
            "id": "e61a02b0-aaf0-477a-b8ab-798af9286937",
            "actions": [
                {
                    "name": "VerticalAxis",
                    "type": "Button",
                    "id": "7c00b44b-3cbc-4040-bffe-93d703d2fd73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HorizontalAxis",
                    "type": "Button",
                    "id": "c85afbcf-9978-4b03-b33d-4230d106a3fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "125de35a-fef2-4062-a25b-300382ce7bf2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Save",
                    "type": "Button",
                    "id": "bf75efb4-b30d-4007-8357-69fe359e6fb1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Load",
                    "type": "Button",
                    "id": "f6a5c6e6-71e4-46fa-b746-d0878e743491",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "b5ed2599-80b2-4083-a65f-18b3fcb506d1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b9683a2b-6349-4f04-a2b2-eb8589b7fccd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4da19842-306e-40fe-9dab-aa4b3bcec9f4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "d3255fb6-c350-4e9c-94b1-d9f2802e2bd9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "44978502-5d3b-42af-a073-5c1cbcd03c9a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e530d32f-5cfe-47fb-88c3-7916688c7d4c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9e667bd6-ff4f-4779-abe7-e2738ff1e5e9",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d1137f4-0c0b-4a09-9898-8c57f0d0a26b",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Save",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46060e08-6ef0-4a32-bd42-6f3ffaa3dce6",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Load",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}